; ModuleID = '/home/carl/AnghaBench/radare2/libr/asm/p/extr_asm_nios2.c_nios2_buffer_read_memory.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/asm/p/extr_asm_nios2.c_nios2_buffer_read_memory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.disassemble_info = type { i32 }

@bytes = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*, i32, %struct.disassemble_info*)* @nios2_buffer_read_memory to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nios2_buffer_read_memory(i32 %0, i32* %1, i32 %2, %struct.disassemble_info* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.disassemble_info*, align 8
  store i32 %0, i32* %5, align 4
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  store %struct.disassemble_info* %3, %struct.disassemble_info** %8, align 8
  %9 = load i32*, i32** %6, align 8
  %10 = load i32, i32* @bytes, align 4
  %11 = load i32, i32* %7, align 4
  %12 = call i32 @memcpy(i32* %9, i32 %10, i32 %11)
  ret i32 0
}

declare dso_local i32 @memcpy(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
